@@ -46,6 +46,8 @@ Version 5.0.8
 	with a multi-column primary key would result in multiple constraints being added
 	to the datatable. No test case added to the 1.0 tree as loading a datatable
 	with a reader is a .Net 2.0 thing. (Bug #30204)
+  - Fixed the database schema collection so that it works on servers that are not properly
+    respecting the lower_case_table_names setting.	
           
 Version 5.0.7 5/16/2007
 
